client: add function to check if file handle exists

It is named _ll_fh_exists meaning it is a helper func
only to be used with low level APIs.

Fixes: https://tracker.ceph.com/issues/64313
Signed-off-by: Dhairya Parmar <dparmar@redhat.com>